fixed errbot5 dockerfile

--- a/errbot-5/Dockerfile
+++ b/errbot-5/Dockerfile
@@ -1,13 +1,16 @@
-FROM python:3-alpine
+FROM python:3
 MAINTAINER Martin Peters
 
-# create err user
-RUN mkdir -p /err/data && adduser --home /err err
+# create err user and set it's home as working dir
+RUN mkdir -p /err/data && adduser -D -h /err err
 WORKDIR /err
 
+# define data and config.py as volumes
 VOLUME /err/data /err/config.py
 
-RUN pip install errbot~=5
+# install errbot
+RUN pip install errbot~=5.0
 
+# define command
 USER err
 CMD ['errbot']
