fixed permission issue

--- a/errbot-5.0/Dockerfile
+++ b/errbot-5.0/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Martin Peters
 
 # create err user and set it's home as working dir
 RUN useradd --home-dir /err err
-RUN mkdir -p /err/data
+RUN mkdir -p /err/data && chown err:err -R /err
 WORKDIR /err
 
 # add config.py
